# story_assist

./: .env.example  .gitignore  AGENTS.md  INITIAL_INSTRUCTIONS.md  README.md  pyproject.toml
app/: config.py  jobs.py  main.py  providers.py  schemas.py  security.py  service.py
app/templates/: preamble_default.txt  question_block_with_preamble.txt  research_prompt.txt
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_api_extended.py  test_config.py  test_jobs.py  test_providers.py  test_schemas.py  test_security.py  test_service.py  test_service_templates.py  utils.py
