[project]
name = "story-assist"
version = "0.1.0"
description = "Story sketch expansion assistant with multi-provider LLM search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "fastapi>=0.117.1",
    "google-genai>=1.32.0",
    "openai>=1.108.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]